<resources>
    <string name="app_name">AppChat</string>
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="avt_user">TODO</string>
    <string name="message">message</string>
    <string name="server_port">server port</string>
    <string name="server_ip">server ip</string>
    <string name="start_server">Start Server</string>
    <string name="message_from_server">Message from Server</string>
    <string name="send_message_to_client">Send Message to Client</string>/>/>
    <string name="empty_message">&lt;Empty Message&gt;</string>
    <string name="text_view_format">%1$s [%2$s]</string>
    <string name="name">Name</string>
    <string name="ip_server">ip server</string>
    <string name="message_from_client">message from client</string>
    <string name="send_message_to_server">send</string>
</resources>