<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/start_server" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_send"
        android:layout_below="@+id/btn_start_server">

        <LinearLayout
            android:id="@+id/msgList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>
    <EditText
        android:id="@+id/edMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/btn_send"
        android:layout_toStartOf="@id/btn_send"
        android:hint="@string/message_from_client"
        android:inputType="none"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:layout_alignParentEnd="true"
        android:text="@string/send_message_to_server"
        android:textColor="@android:color/white" />


</RelativeLayout>